Fixed   - Menu icon size on mobile view.   - Social icons position in homepage.   - Fix overlay nav links and details position.   - Mobile page title font increased.   - About us call out font size.   - Footer top margin.   - Increased font size of feedback title on mobile view.   - Services and about page scrollbar x on animation.
Added
  - Word 'Menu' to the navigation open menu button.

--- a/components/feedback/feedback.module.css
+++ b/components/feedback/feedback.module.css
@@ -4,7 +4,7 @@
 
 .feedback h2 {
   margin-bottom: 30px;
-  font-size: 1.5em;
+  font-size: 1.9em;
 }
 
 .feedback h2 > span {
