--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,7 +1,6 @@
 .footer {
   background-color: var(--primary-color);
   padding: 50px 0 30px;
-  margin-top: 90px;
   color: #fff;
 }
 
