--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -43,11 +43,22 @@
 
 .openBtn,
 .closeBtn {
+  position: relative;
   width: 40px;
   border: none;
   background: none;
   z-index: 99;
   cursor: pointer;
+}
+
+.openBtn::before {
+  content: 'Menu';
+  display: block;
+  position: absolute;
+  left: -70px;
+  top: 0;
+  font-weight: 600;
+  font-size: 1.3em;
 }
 
 .layout .openBtn svg {
@@ -81,10 +92,14 @@ Light layout
   stroke: #fff;
 }
 
+.headerLight .openBtn::before {
+  color: #fff;
+}
+
 .closeBtn {
   position: absolute;
-  top: 24px;
-  right: 24px;
+  top: 40px;
+  right: 40px;
   opacity: 0.8;
 }
 
@@ -99,6 +114,7 @@ Light layout
 .overlayMenu {
   width: 100%;
   height: 0vh;
+  padding-bottom: 70px;
   background-color: var(--primary-color);
   opacity: 0;
   color: #fff;
@@ -181,6 +197,10 @@ Light layout
 }
 
 @media screen and (min-width: 660px) {
+  .closeBtn {
+    top: 60px;
+    right: 60px;
+  }
   .layout .bar {
     padding: 60px;
   }
