--- a/components/nav/nav.module.css
+++ b/components/nav/nav.module.css
@@ -9,6 +9,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
 }
 
